--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "path": "^0.12.7",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0"
   },
   "devDependencies": {
@@ -20,8 +22,10 @@
     "@swc/jest": "^0.2.20",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^14.2.0",
     "jest": "^28.0.3",
     "jest-environment-jsdom": "^28.0.2",
+    "msw": "^0.39.2",
     "swc-loader": "^0.2.0",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
