--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack serve --config webpack.dev.config.js --hot",
     "build": "webpack  --config webpack.prod.config.js ",
-    "test": "jest --env=jsdom"
+    "test": "jest --env=jsdom --config=jest.config.js"
   },
   "author": "",
   "license": "ISC",
@@ -23,8 +23,6 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.2.0",
-    "jest": "^28.0.3",
-    "jest-environment-jsdom": "^28.0.2",
     "msw": "^0.39.2",
     "swc-loader": "^0.2.0",
     "webpack": "^5.72.0",
